traversal.snake.Snake.scala.error
Compilation error:
Snake:37: error: value update is not a member of plm.universe.Direction
  if(getDirection() = Direction.EST){
     ^